# slowda

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
.github/workflos/: test.yaml
.github/workflows/: test.yaml
check/: check.py
slowda/: __init__.py  loader.py
zig/: build.zig  build.zig.zon
zig/src/: root.zig
