[tool.cibuildwheel.linux]
# Only build CPython (no PyPy) on x86_64 architecture
build = "cp*x86_64"
before-all = [
    # Install Zig
    "echo helloFromZigInstall"
    "pwd"
    "ls"
    "cd /tmp",
    "curl -O https://ziglang.org/download/0.9.1/zig-linux-x86_64-0.9.1.tar.xz",
    "tar xf zig-linux-x86_64-0.9.1.tar.xz",
    "mv zig-linux-x86_64-0.9.1 /usr/local/bin/zig-linux-0.9.1"
]
environment = { PATH="$PATH:/usr/local/bin/zig-linux-0.9.1" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slowda"
version = "0.1.0"
# ... other metadata like authors, license, etc.

[tool.setuptools]
# This tells setuptools to find packages in the 'src' directory
package-dir = {"" = "slowda"}
# This is crucial! It tells setuptools to include non-Python files found in your package.
# We are telling it to include any file within the 'my_project/lib' directory.
include-package-data = true
